Added padding in bio

--- a/src/app/components/info/bio/bio.component.html
+++ b/src/app/components/info/bio/bio.component.html
@@ -6,7 +6,7 @@
     <div>
       <h1 class="text-4xl font-bold text-gray-900">Kamila Białkowska-Ismaił</h1>
     </div>
-    <p class="text-lg text-gray-700 mb-4">
+    <p class="text-lg text-gray-700 mb-4 py-4">
       Urodzona w Polsce w 1969, gdzie obecnie pracuje. W latach 1989 -1995 studiowała w Wyższym Moskiewskim Instytucie
       Sztuki Monumentalno-Dekoracyjnej i Stosowanej. Uzyskała tam dyplom z wyróżnieniem rektorskim w specjalności
       konserwacja malarstwa monumentalnego i otrzymała kwalifikację artysty konserwatora oraz tytuł naukowy magistra
